# fastapi-celery

./: .gitignore  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt 
.scannerwork/: report-task.txt
alembic/: env.py
alembic/versions/: 5968e79f6829_.py  8c52d69fde91_.py
compose/local/fastapi/: Dockerfile  entrypoint
project/: __init__.py  celery_utils.py  config.py  database.py
project/users/: __init__.py  tasks.py  views.py
project/users/templates/: form.html  main.js
